# Parallel-otsu-algorithm

./: README.md  hard.cpp  measurements.cpp  measurements.hpp  noexcept_io.cpp  noexcept_io.hpp  otsu.cpp  otsu.hpp  pgm_parsing.cpp  pgm_parsing.hpp  utility.hpp
LabOpenMp/: CMakeLists.txt  bit_io.hpp  hard.cpp  simple_io.cpp
LabOpenMp/include/: max_levels_calculators.hpp  utility.hpp
LabOpenMp/src/: bit_io.cpp  hard.cpp  max_levels_calculators.cpp
